# slidebridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETTINGS_TODO.md  LICENSE  PROMOTION_DRAFT.md  README.en.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  ROADMAP_V021.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ANNOTATIONS.md  ANNOTATION_FORMATS.md  CLI.md  COMPLIANCE.md  COORDINATES.md  EXPORT_PATCHES.md  FIGURES.md  HEATMAPS.md  ISSUES_AND_IMPROVEMENTS.md  LABEL_PATCHES.md  PATCHES.md  PLUGINS.md  QC.md  REMOTE_VIEWING.md  VIEWER.md  WINDOWS.md
docs/assets/: demo_coords.csv
examples/: coords_example.csv
release_notes/: v0.2.0.md
scripts/: local_remote_smoke_test.ps1  local_smoke_test.ps1  vendor-openseadragon.mjs
slidebridge/: __init__.py  cli.py
slidebridge/annotations/: __init__.py  aperio.py  asap.py  demo.py  geometry.py  io.py  label_patches.py  qupath.py  render.py  table.py
slidebridge/app/: __init__.py  remote.py  server.py  sessions.py
slidebridge/app/static/: app.css  app.js
slidebridge/app/templates/: app.html
slidebridge/core/: __init__.py  diagnostics.py  metadata.py  protocol.py  registry.py  warnings.py
slidebridge/export/: __init__.py  patches.py
slidebridge/overlays/: __init__.py  heatmap.py  patch_table.py  patches.py  raster_heatmap.py
slidebridge/qc/: __init__.py  blur.py  report.py  tissue.py
slidebridge/readers/: __init__.py  image_reader.py  openslide_reader.py  tiffslide_reader.py
slidebridge/remote/: __init__.py  commands.py  diagnostics.py  profiles.py  spec.py  ssh.py  tunnel.py
slidebridge/render/: __init__.py  figure.py  figure_spec.py  overlay.py  view.py
slidebridge/server/: __init__.py  app.py
slidebridge/server/static/: viewer.css  viewer.js  viewer_figure.js
slidebridge/server/templates/: viewer.html
slidebridge/utils/: demo.py  image.py  paths.py
tests/: test_annotation_io.py  test_annotation_table.py  test_aperio_xml.py  test_app_launcher.py  test_asap_xml.py  test_cli.py  test_cli_annotations.py  test_cli_release.py  test_cli_v020.py  test_export_patches.py  test_figure_spec.py  test_geometry.py  test_heatmap.py  test_image_reader.py  test_metadata.py  test_package_data.py  test_patch_formats.py  test_patch_table.py  test_patches.py  test_qc.py  test_qupath_geojson.py  test_raster_heatmap.py  test_remote_cli.py  test_remote_commands.py  test_remote_profiles.py  test_remote_security.py  test_remote_spec.py  test_remote_ssh.py  test_render_figure.py  test_render_overlay.py  test_render_view.py  test_report.py  test_server.py  test_viewer_annotations.py  test_viewer_visual.py
