[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slidebridge-core"
version = "0.2.11"
description = "A lightweight WSI inspection and debugging toolkit for computational pathology."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "SlideBridge Core contributors" }
]
keywords = [
  "computational-pathology",
  "whole-slide-image",
  "digital-pathology",
  "wsi",
  "openslide",
  "tiffslide",
  "pathology-ai",
  "debugging",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "fastapi",
  "h5py",
  "jinja2",
  "numpy",
  "openslide-python",
  "openslide-bin; platform_system == 'Windows'",
  "pandas",
  "pillow",
  "rich",
  "tifffile",
  "tiffslide",
  "typer",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "build",
  "twine",
]
h5 = ["h5py"]
torch = ["torch"]

[project.scripts]
slidebridge = "slidebridge.cli:app"

[tool.setuptools.packages.find]
include = ["slidebridge*"]

[tool.setuptools.package-data]
slidebridge = [
  "server/templates/*.html",
  "server/static/vendor/openseadragon/*.js",
  "server/static/vendor/openseadragon/*.txt",
  "server/static/vendor/openseadragon/images/*.png",
]
